// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssetLabeling should render properly with an asset selected 1`] = `
Array [
  .emotion-0 {
  padding: 8px;
  padding-left: 16px;
  border-bottom: 1px solid #3b3b3b;
  color: #e0e0e0;
}

<div
    className="emotion-0"
  >
    TIFF_1MB.tiff
  </div>,
  .emotion-0 {
  padding: 16px;
  border-bottom: 1px solid #3b3b3b;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  font-weight: 500;
}

.emotion-2 {
  color: #6088FE;
}

.emotion-3 {
  height: 8px;
}

.emotion-4 {
  color: #b3b3b3;
}

.emotion-5 {
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-6 {
  background-color: #3b3b3b;
  border-radius: 2px;
  border: none;
  width: 100%;
  color: #ffffff;
  font-size: 15px;
  line-height: 20px;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 12px;
  padding-right: 32px;
  -moz-appearance: none;
  -webkit-appearance: none;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgPHBhdGggZD0iTTE0LjI0MyA3LjU4NkwxMCAxMS44MjggNS43NTcgNy41ODYgNC4zNDMgOSAxMCAxNC42NTcgMTUuNjU3IDlsLTEuNDE0LTEuNDE0eiIgZmlsbD0iI2ZmZmZmZiIgLz4KPC9zdmc+');
  background-repeat: no-repeat,repeat;
  -webkit-background-position: right 8px top 50%;
  background-position: right 8px top 50%;
  -webkit-background-size: 20px;
  background-size: 20px;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <div>
        Select a dataset
      </div>
      <div>
        <a
          className="emotion-2"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/datasets/add"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          + New Data Set
        </a>
      </div>
    </div>
    <div
      className="emotion-3"
    />
    <label
      className="emotion-4"
    >
      Dataset:
      <div
        className="emotion-5"
      >
        <select
          className="emotion-6"
          defaultValue=""
          disabled={false}
          onChange={[Function]}
        >
          <option
            disabled={true}
            value=""
          >
            Select an option...
          </option>
          <option
            value="111d0534-7736-135f-8a62-d29da837913f"
          >
            faces
          </option>
          <option
            value="4b0b10a8-cec1-155c-b12f-ee2bc8787e06"
          >
            cats
          </option>
          <option
            value="1c237c5c-8b64-11eb-882c-a6e78dab3824"
          >
            pets
          </option>
          <option
            value="4b0b10a9-cec1-155c-b12f-ee2bc8787e06"
          >
            mystery
          </option>
        </select>
      </div>
    </label>
  </div>,
  .emotion-0 {
  padding: 16px;
  color: #ffffff;
  font-style: italic;
}

<div
    className="emotion-0"
  >
    Select a dataset to start labeling assets.
  </div>,
]
`;

exports[`AssetLabeling should render properly with an asset selected 2`] = `
Array [
  .emotion-0 {
  padding: 8px;
  padding-left: 16px;
  border-bottom: 1px solid #3b3b3b;
  color: #e0e0e0;
}

<div
    className="emotion-0"
  >
    TIFF_1MB.tiff
  </div>,
  .emotion-0 {
  padding: 16px;
  border-bottom: 1px solid #3b3b3b;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  font-weight: 500;
}

.emotion-2 {
  color: #6088FE;
}

.emotion-3 {
  height: 8px;
}

.emotion-4 {
  color: #b3b3b3;
}

.emotion-5 {
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-6 {
  background-color: #3b3b3b;
  border-radius: 2px;
  border: none;
  width: 100%;
  color: #ffffff;
  font-size: 15px;
  line-height: 20px;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 12px;
  padding-right: 32px;
  -moz-appearance: none;
  -webkit-appearance: none;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgPHBhdGggZD0iTTE0LjI0MyA3LjU4NkwxMCAxMS44MjggNS43NTcgNy41ODYgNC4zNDMgOSAxMCAxNC42NTcgMTUuNjU3IDlsLTEuNDE0LTEuNDE0eiIgZmlsbD0iI2ZmZmZmZiIgLz4KPC9zdmc+');
  background-repeat: no-repeat,repeat;
  -webkit-background-position: right 8px top 50%;
  background-position: right 8px top 50%;
  -webkit-background-size: 20px;
  background-size: 20px;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <div>
        Select a dataset
      </div>
      <div>
        <a
          className="emotion-2"
          href="/76917058-b147-4556-987a-0a0f11e46d9b/datasets/add"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          + New Data Set
        </a>
      </div>
    </div>
    <div
      className="emotion-3"
    />
    <label
      className="emotion-4"
    >
      Dataset:
      <div
        className="emotion-5"
      >
        <select
          className="emotion-6"
          defaultValue="111d0534-7736-135f-8a62-d29da837913f"
          disabled={false}
          onChange={[Function]}
        >
          <option
            disabled={true}
            value=""
          >
            Select an option...
          </option>
          <option
            value="111d0534-7736-135f-8a62-d29da837913f"
          >
            faces
          </option>
          <option
            value="4b0b10a8-cec1-155c-b12f-ee2bc8787e06"
          >
            cats
          </option>
          <option
            value="1c237c5c-8b64-11eb-882c-a6e78dab3824"
          >
            pets
          </option>
          <option
            value="4b0b10a9-cec1-155c-b12f-ee2bc8787e06"
          >
            mystery
          </option>
        </select>
      </div>
    </label>
  </div>,
  <AssetLabelingForm
    assetId="vZgbkqPftuRJ_-Of7mHWDNnJjUpFQs0C"
    dispatch={[Function]}
    projectId="76917058-b147-4556-987a-0a0f11e46d9b"
    state={
      Object {
        "datasetId": "111d0534-7736-135f-8a62-d29da837913f",
        "datasetType": "FaceRecognition",
        "errors": Object {},
        "isLoading": false,
        "labels": Object {},
      }
    }
  />,
]
`;

exports[`AssetLabeling should render properly with no asset selected 1`] = `
.emotion-0 {
  padding: 16px;
  color: #ffffff;
  font-style: italic;
}

<div
  className="emotion-0"
>
  Select an asset to add labels.
</div>
`;
